[tool.poetry]
name = "jsoner"
version = "0.1.0"
description = ""
authors = ["trojvn <mrx.trojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.2.1"
tooler = {git = "https://github.com/trojvn/tooler.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
